--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -2,15 +2,16 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Creates an Ishihara Test plate from parameters
 Resources:
-  TimeFunction:
+  RequestPlate:
     Type: AWS::Serverless::Function
     Properties:
       Handler: ColorblindMessageEncrypter.CreatePlateHandler::handleRequest
-      Runtime: Java 8
-      CodeUri: ./
-      Policies: AmazonDynamoDBFullAccess
+      Runtime: java8
+      AutoPublishAlias: live
+      CodeUri: ./target/output.jar
       Events:
-        HttpPost:
+        ColorBlindMessageEncrypter:
           Type: Api
           Properties:
+            Path: /TimeResource
             Method: post
