--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,24 +1,24 @@
 version: 0.2
 phases:
- install:
-   commands:
-     - echo Entered the install phase...
-     - apt-get update -y > /dev/null
-     - apt-get install -y maven > /dev/null      
- pre_build:
-   commands:
-     - ls -l
- build:
-   commands:
-     - mvn package shade:shade
- post_build:
-   commands:
-     - mv target/colorblind-message-encrypter-createplatehandler-1.0-SNAPSHOT.jar target/output.jar
-     - aws cloudformation  package --template-file samTemplate.yaml --s3-bucket colorblind-message-encrypter-lambda --output-template-file outputSamTemplate.yaml
-     - echo Build completed on `date`
+  install:
+    commands:
+    - echo Entered the install phase...
+    - apt-get update -y > /dev/null
+    - apt-get install -y maven > /dev/null
+  pre_build:
+    commands:
+    - ls -l
+  build:
+    commands:
+    - mvn package shade:shade
+  post_build:
+    commands:
+    - mv target/colorblind-message-encrypter-createplatehandler-1.0-SNAPSHOT.jar target/output.jar
+    - aws cloudformation  package --template-file template.yml --s3-bucket colorblind-message-encrypter-lambda --output-template-file output.yml
+    - echo Build completed on `date`
 artifacts:
   type: zip
   files:
-    - samTemplate.yaml
-    - outputSamTemplate.yaml
+    - template.yml
+    - output.yml
     - target/output.jar
