--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
     - ls -l
   build:
     commands:
-    - mvn package shade:shade
+    - mvn package shade:shade -q
   post_build:
     commands:
     - mv target/colorblind-message-encrypter-createplatehandler-1.0-SNAPSHOT.jar target/output.jar
