--- a/template.yml
+++ b/template.yml
@@ -95,7 +95,7 @@ Resources:
       HttpMethod: "POST"
       Integration:
         IntegrationHttpMethod: "POST"
-        Type: "AWS"
+        Type: "AWS_PROXY"
         Uri: !Sub
           - "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations"
           - lambdaArn: !GetAtt "lambdaFunction.Arn"
